--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         <div class="overlay"></div>
       </div>
 
-      <div class="home-img">
+      <!-- <div class="home-img">
         <img src="Sam's Image.png" alt="Sam's Image" />
-      </div>
+      </div> -->
     </section>
 
     <!-- about section design -->
@@ -319,3 +319,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
