--- a/index.html
+++ b/index.html
@@ -282,11 +282,12 @@
           />
         </div>
         <textarea
-          name=""
+          name="Message"
           id=""
           cols="30"
           rows="10"
           placeholder="Your Message"
+          required
         ></textarea>
         <input
           id="contact-form"
