--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <!-- header design -->
     <header class="header">
-<!--       <a href="#" class="logo">Sam's Web Portfolio</a> -->
+      <a href="#" class="logo">Sam's Web Portfolio</a>
 
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
