--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </p>
         <p>
           Currently I'm a student of St. Joseph's Convent School Moga, and
-          Studing in Clas 9th, on the other hand, I'm learning how to create
+          Studing in Class 9th, on the other hand, I'm learning how to create
           beautiful and functional websites using HTML, CSS, JavaScript, and
           WordPress.
         </p>
